@@ -24,6 +24,7 @@
         <button id=f6 class=cmd-button>F6 - move</button>
         <button id=f7 class=cmd-button>F7 - make dir</button>
         <button id=f8 class=cmd-button>F8 - delete</button>
+        <button id=~ class=cmd-button>~ - console</button>
     </div>
     <script src=/lib/util.js></script>
     <script src=/lib/client/dom.js></script>
