@@ -237,16 +237,20 @@ var Util, DOM, CloudFunc, CloudCmd;
             ];
         
         for (i = 1; i <= 8; i++) {
-            lButton         = 'f' + i,
-            lEl             = DOM.getById('f' + i);
+            lButton             = 'f' + i,
+            lEl                 = DOM.getById('f' + i);
+            lKeysPanel[lButton] = lEl;
             
             if( i === 1 || i === 3 || i === 4)
                 Events.addOneTime('click', lFuncs[i], lEl);
             else
                 Events.addClick(lFuncs[i], lEl);
-            
-            lKeysPanel[lButton] = lEl;
         }
+        
+        lButton                 = '~',
+        lEl                     = DOM.getById('~');
+        lKeysPanel[lButton]     = lEl;
+        Events.addOneTime('click', CloudCmd.Console, lEl);
         
         CloudCmd.KeysPanel = lKeysPanel;
         Util.exec(pCallBack);
