@@ -30,6 +30,7 @@ var CloudCmd, Util, DOM, $;
             ]);
             
             DOM.Events.addKey(listener);
+            DOM.setButtonKey('~', Console.show);
             
             delete Console.init;
         };
